[gd_scene load_steps=6 format=3 uid="uid://bvrrr10qf5yq8"]

[ext_resource type="Script" uid="uid://ctfe66cyg775i" path="res://gui/key_pad.gd" id="1_0jbbn"]
[ext_resource type="StyleBox" uid="uid://d1hs3dtxxsmjw" path="res://assets/ui/ingame_device_ui_panel.tres" id="1_px2vo"]

[sub_resource type="LabelSettings" id="LabelSettings_xykhl"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_px2vo"]

[sub_resource type="LabelSettings" id="LabelSettings_0jbbn"]
font_color = Color(1, 0, 0, 1)

[node name="KeyPad" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jbbn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_px2vo")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Key"
label_settings = SubResource("LabelSettings_xykhl")
horizontal_alignment = 1

[node name="Hint" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hint: xxx"
label_settings = SubResource("LabelSettings_px2vo")
horizontal_alignment = 1

[node name="TextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
placeholder_text = "Enter key"
alignment = 1
max_length = 10
context_menu_enabled = false
emoji_menu_enabled = false
selecting_enabled = false
secret = true

[node name="IncorrectKey" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_0jbbn")
horizontal_alignment = 1

[connection signal="text_submitted" from="PanelContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
